# ScreenSniper

./: .gitignore  CMakeLists.txt  Makefile  README.md  ScreenSniper.pro  blog.md  build.bat  build.sh  facedetector.cpp  globalhotkey.cpp  globalhotkey.h  i18nmanager.cpp  i18nmanager.h  local_config.cmake.example  mainwindow.cpp  mainwindow.h  ocrmanager.cpp  ocrmanager.h  package-lock.json  package.json  pinwidget.cpp  resources.qrc  screenshotwidget.cpp  screenshotwidget.h  scrollcapture.cpp  scrollcapture.h
ScreenSniper.app/Contents/MacOS/: ScreenSniper
locales/: en.json  zh.json  zhHK.json
